--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 </head>
 <body>
 
-    <section class="header">
-        <div class="header_logo">
-            <img src="Images/My_Logo.svg" alt="Mitchell Haden Designs">
+    <section class="navigation">
+        <div class="My_Logo">
+            <img class="Main_logo" src="Images/My_Logo.svg" alt="Mitchell Haden Designs">
         </div>
 
-        <nav class="navigation">
+        <nav class="inline_block">
             <ul>
-                <li class="nav_links">About Me</li>
-                <li class="nav_links">My Work</li>
-                <li class="nav_links">Resume</li>
-                <button class="contact">Contact Me</button>
+                <li class="inline_block">About Me</li>
+                <li class="inline_block">My Work</li>
+                <li class="inline_block">Resume</li>
+                <div class="contact">Contact Me</div>
             </ul>
         </nav>
 
@@ -26,11 +26,12 @@
 
    
     <Section class="hero">
-        <div class="content">
+        <div class="hero_content">
             <img src="Images/hero_img.png" alt="My Portfolio 2024">
         </div>
     </Section>
 
+    
     <footer>
         <Div class="footer_logo_container">
             <img class="footer_logo" src="" alt="">
