Updated footer section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="style.css" type="text/css" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo&display=swap" rel="stylesheet">
+
+
 </head>
 <body>
 
@@ -33,12 +39,19 @@
 
     
     <footer>
+        <H3> Thank you for viewing my Portfolio! &nbsp;&nbsp;&nbsp;You can view more about me and my projects from these links.</H3>
         <Div class="footer_logo_container">
-            <img class="footer_logo" src="" alt="">
-            <img class="footer_logo" src="" alt="">
-            <img class="footer_logo" src="" alt="">
+            <div class="footer_FB"></div>
+            <div class="footer_linkedIn"></div>
+            <div class="footer_Behnce"></div>
+
         </Div>
     </footer>
     
+
+
+
+
+
 </body>
 </html>
