footer links work now

--- a/index.html
+++ b/index.html
@@ -41,12 +41,18 @@
     <footer>
         <H3> Thank you for viewing my Portfolio! &nbsp;&nbsp;&nbsp;You can view more about me and my projects from these links.</H3>
         <Div class="footer_logo_container">
-            <div class="footer_FB"></div>
-            <div class="footer_linkedIn"></div>
-            <div class="footer_Behnce"></div>
+            <a style="display: inline-block;" href="https://www.facebook.com/mitchell.harden.7"> 
+                    <div class="footer_FB" ></div>
+            </a> 
+            <a style="display: inline-block;" href="https://www.linkedin.com/in/mitchell-harden-b05967164/">    
+                    <div class="footer_linkedIn"></div>
+            </a>
+            <a style="display: inline-block;" href="https://www.behance.net/MitchellHarden">    
+                <div class="footer_Behnce"></div>
+            </a>
 
         </Div>
-    </footer>
+    </footer> 
     
 
 
